objects/CameleonCPQ__QxAsyncJobs__c.object
<CustomObject>
    <description>PROS Smart CPQx Asynchronous Jobs Queue</description>
    <fields>
        <fullName>CameleonCPQ__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__EntityId__c</fullName>
        <description>The identifier of the main Salesforce entity to which the job is related</description>
        <label>Related Entity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SeqNumber__c</fullName>
        <description>The sequence number of the job</description>
        <label>Sequence Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Settings__c</fullName>
        <description>The job settings in JSON format</description>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>PROS Asynchronous Job</label>
    <nameField>
        <label>QxAsyncJobs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Asynchronous Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>